<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/Daniel"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/Aguilera"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/matricula"
        android:textAlignment="center" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCloseAbout"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            android:text="@string/close" />

        <Button
            android:id="@+id/btnGithub"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/github_profile" />
    </LinearLayout>
</LinearLayout>